--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -46,6 +46,9 @@ body {
   padding-top: 1%;
 }
 
+.bg {
+  background-color:powderblue; 
+}
 .center {
   text-align: center;
   margin: 0;
@@ -73,8 +76,13 @@ body {
 font-weight: lighter; font-family: IBM Plex Sans Thai, serif "
 }
 
+.funky {
+  background-color: black;
+}
+
 #header, #form, #datetime {
-  margin: 0 1rem;
+  margin-left: auto;
+  margin-right: auto;
   min-height: 10vh;
   width: 100%;
   text-align: center;
@@ -123,6 +131,10 @@ font-weight: lighter; font-family: IBM Plex Sans Thai, serif "
 
 .darker-theme {
   background-image: linear-gradient(100deg, #001214, #001f29);
+}
+
+.funky-theme {
+  background: linear-gradient(-50deg, red 5px, blue 40px);
 }
 
 form {
